--- a/_includes/nav_basics.html
+++ b/_includes/nav_basics.html
@@ -6,6 +6,6 @@
         <td><a href="{{site.baseurl}}/basics/javascript">JavaScript</a></td>
         <td><a href="{{site.baseurl}}/basics/dom">DOM</a></td>
         <td><a href="{{site.baseurl}}/basics/datatypes">Data Types</a></td>
-        <td><a href="{{site.baseurl}}/basics/1.4-correcting-errors">Correcting Errors</a></td>
+        <td><a href="{{site.baseurl}}/basics/js-debug">Correcting Errors</a></td>
     </tr>
 </table>
