--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div id="header">
     <nav>
       <ul>
-        <li class="fork"><a href="{{site.baseurl}}/home.md">Home</a></li>
+        <li class="fork"><a href="{{site.baseurl}}/home">Home</a></li>
 <!--        <li class="fork"><a href="{{site.baseurl}}/csse">CSSE</a></li> -->
 <li class="fork"><a href="{{site.baseurl}}/csp">CSP</a></li>
 <!----        <li class="fork"><a href="{{site.baseurl}}/csa">CSA</a></li> -->
@@ -12,7 +12,7 @@
         <li class="fork"><a href="{{site.baseurl}}/blogs">Blogs</a></li>
         <li class="title"><a href="{{ site.github.repository_url }}#readme">View On GitHub</a></li>
         <li class="title"><a href="{{site.baseurl}}/help">Help</a></li>
-        <li class="title"><a href="{{site.baseurl}}/nhclogin.html">Login</a></li>
+        <li class="title"><a href="{{site.baseurl}}/">Login</a></li>
       </ul>
     </nav>
   </div><!-- end header -->
