--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,3 +87,10 @@
     background-color: #e70f0f;
   }
 
+  .login-button {
+    @extend .button;
+    width: 2000px; /* Set the desired width */
+    height: 50px; /* Set the desired height */
+    font-size: 16px; /* Set the desired font size */
+    /* Additional styles can be added as needed */
+  }
